# amp-emu

./: .gitmodules  CMakeLists.txt  README.md  logo.xcf
include/: arm7tdmi.h  gba.h  window.h
source/: arm7tdmi.c  gba.c  main.c  window.c  window.cpp
